Template folders insead of template files. Config values can now be parametrized (see config.py comments).

--- a/templates/nginx-php/nginx.conf
+++ b/templates/nginx-php/nginx.conf
@@ -1,5 +1,5 @@
 upstream php-{site} {{
-    server unix:/run/php/php7.2-fpm.{site}.sock;
+    server unix:/run/php/php{phpver}-fpm.{site}.sock;
 }}
 
 server {{
@@ -15,8 +15,6 @@ server {{
 
     location = /robots.txt {{ allow all; log_not_found off; access_log off; }}
     location = /favicon.ico {{ allow all; log_not_found off; access_log off; }}
-    # Very rarely should these ever be accessed outside of your lan
-    location ~* \.(txt|log)$ {{ deny all; }}
     # Block access to "hidden" files and directories whose names begin with a
     # period, except .well-known. This includes directories used by version
     # control systems such as Subversion or Git to store control files.
