--- a/templates/nginx-php/phppool.conf
+++ b/templates/nginx-php/phppool.conf
@@ -21,7 +21,7 @@
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 user = {user}
-group = {wwwgroup}
+group = {group}
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -418,6 +418,6 @@ pm.max_spare_servers = 3
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 php_flag[display_errors] = off
-php_admin_value[error_log] = /var/www/{site}/log/phperror.log
+php_admin_value[error_log] = /var/www/{site}/logs/phperror.log
 php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
